Also need request for testing

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "ejs": "~0.7.1",
     "templar": "0.0.4",
-    "tap": "~0.2.4"
+    "tap": "~0.2.4",
+    "request": "~2.9.202"
   },
   "optionalDependencies": {},
   "engines": {
